# customer-churn-prediction

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: Home.py
app/utils/: data_processing_st.py
src/: main.py  model.py  preprocessor.py
