[tool.poetry]
name = "Customer Churn Prediction"
version = "0.1.0"
description = "BCG Hackathon"
authors = ["youssefjouini1 <mohamed-youssef.jouini@polytechnique.edu>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.25.0"
sklearn = "^0.0.post7"
scikit-learn = "^1.3.0"
plotly = "^5.16.0"
xgboost = "^1.7.6"
shap = "^0.42.1"
imblearn = "^0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
